# rental-payment-system

./: .dockerignore  .gitignore  Dockerfile  FEATURES_SUMMARY.md  INTERVIEW_SCRIPT_30MIN.md  PROJECT_PRESENTATION_GUIDE.md  QUICK_REFERENCE_CARD.md  Questions.md  alembic.ini  docker-compose.yml  pyproject.toml  pyproject.toml.save
alembic/: env.py
alembic/versions/: 2bdbf9e98482_init.py
app/: celery_app.py  config.py  database.py  main.py  test_db.py
app/api/v1/: bank_accounts.py  leases.py  payments.py  properties.py  users.py
app/models/: __init__.py  audit_log.py  bank_account.py  lease.py  payment_schedule.py  property.py  transaction.py  transaction_event.py  user.py
app/schemas/: bank_account.py  lease.py  property.py  transaction.py  user.py
app/services/: payment_service.py
app/tasks/: payment_tasks.py
app/tests/: test_idempotency.py  test_lease_creation.py
scripts/: reconciliation_errors_summary.sql  reconciliation_query.sql  reconciliation_setup.sql  seed_data.sql
