[project]
name = "rental-payment-system"
version = "0.1.0"
description = "Rent Payment System"
authors = [
    {name = "Nishant"}
]
license = {text = "MIT"}
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.128.8,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "redis (>=7.1.1,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[tool.poetry]
package-mode = false



[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
